// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the class when hovered 1`] = `
<div>
  <a
    className="normal"
    href="http://www.facebook.com"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    facebook
  </a>
</div>
`;

exports[`properly escapes quotes 1`] = `
<div>
  <a
    className="normal"
    href="#"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    "Facebook" \\' is \\ 'awesome'
  </a>
</div>
`;

exports[`renders as an anchor when no page is set 1`] = `
<div>
  <a
    className="normal"
    href="#"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    facebook
  </a>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <a
    className="normal"
    href="http://www.facebook.com"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    facebook
  </a>
</div>
`;
